# TADiscordBot

./: .buildpacks  .env  Procfile  README.md  blacklist.txt  callouts.py  class.txt  classsimp.txt  inventory.json  main.py  nltk.txt  nsfw.txt  pyproject.toml  requirements.txt  roasts.txt  ucitel.txt  users.json
cogs/: economy.py  flaska.py  kahoot.py  mainCog.py  minecraft_server.py  music.py  nsfw.py  osu.py  random.py  ranking_system.py  utilities.py
