[tool.poetry]
name = "tadiscordbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
git-kahoot = "^0.2.1"
KahootPY = "^0.1.4"
python-dotenv = "^0.15.0"
selenium = "^3.141.0"
google-trans-new = "^1.1.9"
textblob = "^0.15.3"
replit = "^2.0.0"
pymongo = "^3.11.3"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
