[tool.poetry]
name = "tadiscordbot"
version = "0.1.0"
description = ""
authors = ["NewtonWasTaken <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
git-kahoot = "^0.2.1"
pymongo = "^3.11.3"
discord = "^1.0.1"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
